@@ -1,3 +1,8 @@
+2007-09-26  Alexander Larsson  <alexl@redhat.com>
+
+        * libnautilus-private/nautilus-directory-async.c:
+	Read .hidden using gio.
+
 2007-09-25  Alexander Larsson  <alexl@redhat.com>
 
         * libnautilus-private/nautilus-icon-factory.c:
